<resources>
    <string name="app_name">Okadd_Solar_Calculator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="developer"><![CDATA[Designed & Developed By:Acubedng]]></string>
    <string name="app_use">This App was developed to help estimate the solar system requirements for a small apartment or an office. It is very simple and easy to use.</string>
    <string name="version">OKADD Solar Calculator v1.0</string>
    <string name="get_started">To get started with Solar Calculator, follow the following instructions:</string>
    <string name="first_instruction">1. To add appliances click on the floating \"+\" button. This will open a page where one can input the name of the appliance and
        the power rating, hours of use and quantity.</string>
    <string name="second_instruction">2. Enter the name of the appliance in the provided text field or pick from the list of appliances given. Other appliances include ceiling fan, radio, blender, laptop, iron, standing fan, microwave, refrigerator, deep freezer,
        vacuum cleaner etc.</string>
    <string name="third_instruction">3. Enter the <b>Power Rating</b> of the appliance. The power rating is a quantity that describes the total electrical power required for normal operation of an electric appliance.
        This is listed as part of the name plate data attached to the appliance. The power rating is expressed in either Watts(W) or Kilowatts(KW). </string>
    <string name="fourth_instruction">4. Enter the number of hours the appliance will be used and the quantity</string>
    <string name="fifth_instruction">5. Click the \"save appliance\" button to save the details entered in the text fields.</string>
    <string name="sixth_instruction">6. Save as many appliances as required and then click the "calculate" button to display the <b>Total Load and Total Demand required</b>.</string>
    <string name="seventh_instruction">7. Enter the solar panel and battery details.</string>
    <string name="eigth_instruction">8. Click on "generate result" to show the final result.</string>

    <string name="licence_source">Open Source Licences</string>
    <string name="smallPanel">1480 x 670</string>
    <string name="mediumPanel">1651 x 990</string>
    <string name="largePanel">1981 x 990</string>
</resources>